<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="488dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enterMessage"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:numeric="decimal"
                android:hint="@string/inputHint"
                android:textAlignment="center"
                android:textSize="50sp"
                android:inputType="numberDecimal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/inputType"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="35dp"
                android:layout_height="match_parent" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:spinnerMode="dropdown" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.20" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/outputType"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.20" />

            <Button
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:text="@string/convertButton"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:onClick="convert"
                android:nestedScrollingEnabled="false"
                android:clickable="true"
                android:layout_weight="0.25" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/output"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/outputValue"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:textSize="50sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.20" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beaufortButton"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:onClick="showBeauInfo"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
